CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(multi)
SET(BOOST_FIND_VERSION 1.54.0)
SET(BOOST_NO_SYSTEM_PATHS ON)
SET(BOOST_ROOT "/Users/mcandreb/local")

FIND_PACKAGE(Boost REQUIRED COMPONENTS program_options)
ADD_SUBDIRECTORY(gtest-1.6.0)
enable_testing(true)

INCLUDE_DIRECTORIES(. ${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} ${Boost_INCLUDE_DIRS})
ADD_SUBDIRECTORY(src)

