CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(multi)
IF (APPLE)
    SET(BOOST_FIND_VERSION 1.54.0)
    SET(BOOST_NO_SYSTEM_PATHS ON)
    SET(Boost_DEBUG 1)
#    SET(Boost_INCLUDE_DIR "/Users/mcandreb/local/include")
#    SET(Boost_LIBRARY_DIR "/Users/mcandreb/local/lib")
    SET(BOOST_ROOT "/Users/mcandreb/local")
ELSE()
    SET(BOOST_FIND_VERSION 1.47.0-3)
    SET(BOOST_NO_SYSTEM_PATHS ON)
    SET(Boost_DEBUG 1)
    SET(Boost_INCLUDE_DIR "/sw/3p/boost/linux64/1.47.0-3/include")
    SET(Boost_LIBRARY_DIR "/sw/3p/boost/linux64/1.47.0-3/lib")
    SET(BOOST_ROOT "/sw/3p/boost/linux64")
ENDIF()

SET (Boost_USE_STATIC_LIBS ON)

FIND_PACKAGE(Boost REQUIRED COMPONENTS program_options python)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -stdlib=libc++")
ADD_SUBDIRECTORY(gtest-1.7.0)
enable_testing(true)

INCLUDE_DIRECTORIES(. ${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} ${Boost_INCLUDE_DIRS})
ADD_SUBDIRECTORY(src)

